--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+    {% include 'nav.html' %}
     <main>
         <div class="container">
             <h1>{% block header %}The Last Social Media You'll Ever Need{% endblock %}</h1>
@@ -22,6 +22,7 @@
             {% endblock %}
         </div>
     </main>
+    {% include 'footer.html' %}
 
 </body>
 
