--- a/templates/group.html
+++ b/templates/group.html
@@ -7,12 +7,16 @@
         {{ group.description }}
     </p>
 
-    {% for post in posts %}
+    {% for post in page %}
     <h3>
         Автор: {{ post.author }}, дата публикации: {{ post.pub_date|date:"d M Y" }}
     </h3>
     <p>{{ post.text }}</p>
     <hr>
     {% endfor %}
+
+    {% if page.has_other_pages %}
+        {% include "paginator.html" with items=page paginator=paginator %}
+    {% endif %}
 
 {% endblock %}
