--- a/posts/templates/post.html
+++ b/posts/templates/post.html
@@ -2,6 +2,7 @@
 {% block title %}Пост {{ post.id }} пользователя {{ author.username }}{% endblock %}
 {% block header %}Пост {{ post.id }} пользователя {{ author.username }}{% endblock %}
 {% load user_filters %}
+{% load thumbnail %}
 
 {% block content %}
 
@@ -39,24 +40,8 @@
         <div class="col-md-9">
 
             <!-- Пост -->  
-                <div class="card mb-3 mt-1 shadow-sm">
-                        <div class="card-body">
-                                <p class="card-text">
-                                        <!-- Ссылка на страницу автора в атрибуте href; username автора в тексте ссылки -->
-                                        <a href="/{{ author.username }}/"><strong class="d-block text-gray-dark">@{{ author.username }}</strong></a>
-                                        <!-- Текст поста -->
-                                        {{ post.text }}
-                                </p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group ">
-                                                <!-- Ссылка на редактирование, показывается только автору записи -->
-                                                <a class="btn btn-sm text-muted" href="/{{ author.username }}/{{ post.id }}/edit" role="button">Редактировать</a>
-                                        </div>
-                                        <!-- Дата публикации  -->
-                                        <small class="text-muted">{{ post.pub_date }}</small>
-                                </div>
-                        </div>
-                </div>
+            {% include "post_item.html" with post=post %}
+            {% include 'comments.html' %}
      </div>
     </div>
 </main>
