--- a/templates/group.html
+++ b/templates/group.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Записи сообщества {{ group.title }}{% endblock %}
 {% block header %}{{ group.title }}{% endblock %}
+{% load thumbnail %}
+
 {% block content %}
 
     <p>
@@ -8,11 +10,7 @@
     </p>
 
     {% for post in page %}
-    <h3>
-        Автор: {{ post.author }}, дата публикации: {{ post.pub_date|date:"d M Y" }}
-    </h3>
-    <p>{{ post.text }}</p>
-    <hr>
+        {% include "post_item.html" with post=post %}
     {% endfor %}
 
     {% if page.has_other_pages %}
