--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,19 @@
 {% extends "base.html" %}
 {% block title %}Последние обновления на сайте{% endblock %}
-{% block header %}Последние обновления на сайте{% endblock %}
+{% block header %}{% endblock %}
 {% load thumbnail %}
 
 {% block content %}
     <div class="container">
-           <h1> Последние обновления на сайте</h1>
+        {% include "menu.html" with index=True %}
+           <h1> Последние обновления на сайте </h1>
             <!-- Вывод ленты записей -->
+            {% load cache %}
+            {% cache 20 index_page %}
                 {% for post in page %}
                     {% include "post_item.html" with post=post %}
                 {% endfor %}
+            {% endcache %}
     </div>
 
         <!-- Вывод паджинатора -->
