--- a/posts/templates/comments.html
+++ b/posts/templates/comments.html
@@ -3,15 +3,24 @@
 
 {% if user.is_authenticated %} 
 <div class="card my-4">
+
 <form
     action="{% url 'add_comment' post.author.username post.id %}"
     method="post">
     {% csrf_token %}
     <h5 class="card-header">Добавить комментарий:</h5>
     <div class="card-body">
+
+    {% if form.errors %}
+    <div class="alert alert-danger" role="alert">
+        {{ form.errors.text|escape }}
+    </div>
+    {% endif %}
+
     <form>
         <div class="form-group">
         {{ form.text|addclass:"form-control" }}
+        <small id="{{ form.text.id_for_label }}-help" class="form-text text-muted">{{ form.text.help_text|safe }}</small>
         </div>
         <button type="submit" class="btn btn-primary">Отправить</button>
     </form>
